Project GadgetStore {
  database_type: 'PostgreSQL'
  Note: 'Gadget store project'
}


Table Users {
  user_id int [primary key, increment]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  created_at timestamptz [not null, default: `now()`]
  hash_password varchar [not null]
  phone varchar [not null, unique]
  user_role varchar [not null]
}

Table DiscountCoupons {
    coupon_id int [primary key, increment]
    created_by int [not null, ref: > Users.user_id]
    created_at date [not null]
    expires_at date [not null]
}



Table Categories {
  category_id int [primary key, increment]
  name varchar [not null]
  description varchar [not null]
}

Table Products {
  product_id int [primary key, increment]
  name varchar [not null]
  description varchar [not null]
  price decimal [not null]
  stock int [not null]
  category_id int [not null, ref: > Categories.category_id]
  brand varchar
  model varchar
  Indexes {
    category_id
  }
}


Table Order {
  order_id int [primary key, increment]
  product_id int [not null, ref: > Products.product_id]
  user_id int [not null, ref: > Users.user_id]
  coupon_id int [ref: > DiscountCoupons.coupon_id]
  price decimal [not null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    order_id
    product_id
  }
}

Table Reviews {
  review_id int [primary key, increment]
  order_id int [not null, ref: > Order.order_id]
  created_at timestamptz [not null, default: `now()`]
  rating int [not null]
  review_date date [not null]
  Indexes {
    order_id
  }
}

Table ChatMessage {
    chat_message_id int [primary key, increment]
    chat_session_id int [not null, ref: > ChatSession.chat_session_id]
    message_received varchar
    message_sent varchar
    received_at timestamptz
    sent_at timestamptz
    action varchar [not null]
    message_before_id int [ref: > ChatMessage.chat_message_id]
    Indexes {
        chat_session_id
    }
}

Table ChatSession {
    chat_session_id int [primary key, increment]
    last_message_id int [ref: > ChatMessage.chat_message_id]
    action_flow varchar [not null]
    user_id int [not null, ref: > Users.user_id]
    payload varchar [not null]
    opened_at timestamptz [not null, default: `now()`]
    closed_at timestamptz
    Indexes {
        user_id
    }
}
